--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@ div.ex{
 }
 #box{
 
-    width: 93%;
+    width: 90%;
     padding: 10px;
     border: 5px solid #1067aa;
-    margin: 0;
-	height:600px;
+    margin: 0px;
+	height:400px;
 	overflow-y: scroll;
 }
 </style>
 <style>
         table {
             text-align: center;
-            font-size: 15px;
+            font-size: 11px;
             font-family:Arial, Helvetica, sans-serif;
             background: #c0c0c0;
 			margin:0px;
 			width:100%;
+			
         }
  
         table thead tr,
@@ -90,7 +91,7 @@ div.ex{
 	
 	<!---->
 		
-<div style="margin-top:0%;">
+<div height="100%" width="100%" style="margin-top:-15px;">
 		<a href="#"><img src="css/images/trydesign.png" height="100%" width="100%"></a><br>
 	    <a href="#newsfeed"><img src="css/images/newsfeed.png" height="20%" width="30%"></a>
 	    <a href="#programs"><img src="css/images/programs.png" height="20%" width="30%"></a>
@@ -115,9 +116,9 @@ div.ex{
 		</div>
 		<div data-role="content" data-theme="a" align="center">
 			<a href="#newsfeed"><img src="css/images/trydesign.png" height="100%" width="100%"></a><br><br>
-	    <a href="#studentportal"><img src="css/images/student.png" height="20%" width="30%"></a><br>
-	  <a href="#parentportal"><img src="css/images/parent.png" height="20%" width="30%"></a>
-	   <a href="#facultyportal"><img src="css/images/faculty.png" height="20%" width="30%"></a>
+	    <a href="#studentportal"><img src="css/images/student.png" height="30%" width="40%"></a><br>
+	  <a href="#parentportal"><img src="css/images/parent.png" height="30%" width="40%"></a>
+	   <a href="#facultyportal"><img src="css/images/faculty.png" height="30%" width="40%"></a>
 		</div>
 		<div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
@@ -132,9 +133,9 @@ div.ex{
 <div data-role="header" data-position="fixed" data-tap-toggle="false" style="height:10%;">
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/>
 		</div>
-		<div data-role="content" data-theme="a" align="center" style="margin-top:100px;">
+		<div data-role="content" data-theme="a" align="center">
 	
-			<a href="#newsfeed"><img src="css/images/student.png" height="20%" width="30%"></a><br><span class="login-error" style="color:red"></span>
+			<a href="#newsfeed"><img src="css/images/student.png" height="50%" width="50%"></a><br><span class="login-error" style="color:red"></span>
 			<div class="ex" style="margin-top:20px;">
 						<div class="ui-btn ui-icon-user ui-btn-icon-left">
 						<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Student Number" required  style="color:white;"/>
@@ -157,9 +158,9 @@ div.ex{
 <div data-role="header" data-position="fixed" data-tap-toggle="false" style="height:10%;">
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/>
 		</div>
-		<div data-role="content" data-theme="a" align="center" style="margin-top:100px;">
+		<div data-role="content" data-theme="a" align="center">
 	
-			<a href="#newsfeed"><img src="css/images/parent.png" height="20%" width="30%"></a><br><span class="login-error" style="color:red"></span>
+			<a href="#newsfeed"><img src="css/images/parent.png" height="50%" width="50%"></a><br><span class="login-error" style="color:red"></span>
 			
 			<div class="ex" style="margin-top:20px;">
 						<div class="ui-btn ui-icon-user ui-btn-icon-left">
@@ -182,9 +183,9 @@ div.ex{
 <div data-role="header" data-position="fixed" data-tap-toggle="false" style="height:10%;">
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/>
 		</div>
-		<div data-role="content" data-theme="a" align="center" style="margin-top:100px;">
+		<div data-role="content" data-theme="a" align="center">
 	
-			<a href="#newsfeed"><img src="css/images/parent.png" height="20%" width="30%"></a><br><span class="login-error" style="color:red"></span>
+			<a href="#newsfeed"><img src="css/images/parent.png" height="50%" width="50%"></a><br><span class="login-error" style="color:red"></span>
 			<div class="ex" style="margin-top:20px;">
 						<div class="ui-btn ui-icon-user ui-btn-icon-left">
 						<input type="text" id="username1"  placeholder="Enter Student ID number" required  style="color:white;"/>
@@ -231,12 +232,12 @@ div.ex{
 <div data-role="header" data-position="fixed" data-tap-toggle="false" style="height:10%;">
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/>
 		</div>
-		<div data-role="content" data-theme="a" align="center" style="margin-top:40px;">
+		<div data-role="content" data-theme="a" align="center">
 	
-			<a ><img src="css/images/faculty.png" height="20%" width="30%"></a><br><span class="login-error" style="color:red"></span>
+			<a ><img src="css/images/faculty.png" height="50%" width="50%"></a><br><span class="login-error" style="color:red"></span>
 			<div class="ex" style="margin-top:20px;">
 						<div class="ui-btn ui-icon-user ui-btn-icon-left">
-						<input type="text" class="form-control" name="username" id="userfaculty"  placeholder="Enter your Email Address ex.(sample@mail.com)" required  style="color:white;"/>
+						<input type="text" class="form-control" name="username" id="userfaculty"  placeholder="Enter your Email Address" required  style="color:white;"/>
 						</div>
 						<div class="ui-btn ui-icon-lock ui-btn-icon-left">
 						<input type="password" class="form-control" name="pass" id="passfaculty" placeholder="Enter your Password"  style="color:white;" required />
@@ -296,7 +297,7 @@ div.ex{
 		<center><span style="color:white;font-size:20px;">UPDATES</span></center>
 		</div>
 		<div id="box" style="margin-top:-8px;">
-		<div id="updates" style="font:medium arial,sans-serif;font-family:'Roboto';">Unable to fetched updates. Please connect to internet and try again.</div>
+		<div id="updates" style="font:medium arial,sans-serif;font-family:'Roboto';margin-left:'-10px'">Unable to fetch updates. Please check your internet connection and try again.</div>
 		</div>
 </div>
  <div data-role="footer" data-position="fixed" data-theme="a">
