--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ div.ex{
 		</div>
 		<div data-role="content" data-theme="a" align="center">
 		<div id="showschedfaculty"></div>
-		<div data-role="footer" data-position="fixed" data-theme="a" style="height:5%">
+		<div data-role="footer" data-position="fixed" data-theme="a" style="height:5%" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a class="out" data-theme="a"  style="background-color:#1067aa"><font size="2%">LOGOUT</font></a></li>
@@ -278,7 +278,7 @@ div.ex{
 <img src="css/images/trydesign.png" height="100%" width="100%" >
 <img src="css/images/about_2.png" height="100%" width="100%" style="margin-top:-20px;" />
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a" style="background-color:#1067aa"><font size="2%">MENU</font></a></li>
@@ -297,10 +297,10 @@ div.ex{
 		<center><span style="color:white;font-size:20px;">UPDATES</span></center>
 		</div>
 		<div id="box" style="margin-top:-8px;">
-		<div id="updates" style="font:medium arial,sans-serif;font-family:'Roboto';margin-left:'-10px'">Unable to fetch updates. Please check your internet connection and try again.</div>
+		<div id="updates" style="font:medium arial,sans-serif;font-family:'Roboto';margin-left:'-15px'">Unable to fetch updates. Please check your internet connection and try again.</div>
 		</div>
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a" style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
@@ -358,7 +358,7 @@ div.ex{
 <br>
 <img src="css/images/helpinfo.png" height="100%" width="100%">
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a"  style="background-color:#1067aa"><font size="2%">MENU</font></a></li>
@@ -374,7 +374,7 @@ div.ex{
 <div data-role="content" data-theme="a" align="center">
 
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a"  style="background-color:#1067aa"><font size="2%">MENU</font></a></li>
@@ -398,7 +398,7 @@ div.ex{
 <img src="css/images/history_2.png" height="100%" width="100%">
 </center>
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a"  style="background-color:#1067aa"><font size="2%">MENU</font></a></li>
@@ -417,7 +417,7 @@ div.ex{
 
 <img src="css/images/prog1.png" height="100%" width="100%">
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a" style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
@@ -436,7 +436,7 @@ div.ex{
 
 <img src="css/images/prog2.png" height="100%" width="100%">
 </div>
- <div data-role="footer" data-position="fixed" data-theme="a">
+ <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 			<ul>
 			<li><a href="#home" data-theme="a" style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
@@ -459,15 +459,13 @@ div.ex{
 </div>
   
 	 
-	 <div data-role="footer" data-position="fixed" data-theme="a">
+	 <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 		<ul>
 		
-			<li><a href="#home" data-theme="a"style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
+		<li><a href="#home" data-theme="a"style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
 		<li><a href="#" data-theme="a" style="background-color:#1067aa" ><font size="2%">VISION</font></a></li>
-		
 		<li><a href="#m" data-theme="a" style="background-color:#1067aa" ><font size="2%">MISSION</font></a></li>
-		
 		<li><a href="#g" data-theme="a" style="background-color:#1067aa" ><font size="2%">GOALS</font></a></li>
 			
 			</ul>
@@ -486,7 +484,7 @@ div.ex{
 </div>
   
 	 
-	 <div data-role="footer" data-position="fixed" data-theme="a">
+	 <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 		<ul>
 		
@@ -513,7 +511,7 @@ div.ex{
 </div>
   
 	 
-	 <div data-role="footer" data-position="fixed" data-theme="a">
+	 <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 		<ul>
 		<li><a href="#home" data-theme="a"style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
@@ -540,7 +538,6 @@ div.ex{
 </div>
   <div data-role="collapsible" data-theme="a" data-content-theme="a" data-iconpos="right">
     <h4><font face="Century Gothic">JUNE</font></h4>
-        <p ><font color="white" face="Century Gothic">JUNE 2-4: CCS ORIENTATION</font></p>
     <p ><font color="white" face="Century Gothic">JUNE 9: Start of Classes</font></p>
 	<p ><font color="white" face="Century Gothic">JUNE 10: General Student Orientation</font></p>
 	<p><font color="white" face="Century Gothic">JUNE 12: INDEPENDENCE DAY</font></p>
@@ -550,7 +547,6 @@ div.ex{
  <h4><font face="Century Gothic">JULY</font></h4>
   <p ><font color="white" face="Century Gothic">JULY 11: Last Day of Dropping of Subjects with Permission</font></p>
 	<p ><font color="white" face="Century Gothic">JULY 16-20: PRELIM EXAMINATIONS</font></p>
-		<p ><font color="white" face="Century Gothic">JULY 23: ACQUAINTANCE PARTY</font></p>
 	
 	
 </div>
@@ -564,15 +560,12 @@ div.ex{
  <div data-role="collapsible" data-theme="a" data-content-theme="a" data-iconpos="right"> 
  <h4><font face="Century Gothic">SEPTEMBER</font></h4>	
 	<p><font color="white" face="Century Gothic">SEPTEMBER 3-5: ANNUAL SPORTFEST</font></p>
-<p><font color="white" face="Century Gothic">SEPTEMBER 4-5: SAITE</font></p>
-<p><font color="white" face="Century Gothic">SEPTEMBER 10-12: Y4IT</font></p>
 
 </div>
  <div data-role="collapsible" data-theme="a" data-content-theme="a" data-iconpos="right"> 
     <h4><font face="Century Gothic">OCTOBER</font></h4>	
 	<p><font color="white" face="Century Gothic">OCTOBER 6-12: FINAL EXAMINATIONS</font></p>
 	<p><font color="white" face="Century Gothic">OCTOBER 13: SEMESTRAL BREAK</font></p>
-        <p><font color="white" face="Century Gothic">OCTOBER 20-24: IT Olympiad (Training) </font></p>
 	<p><font color="white" face="Century Gothic">OCTOBER 23-31: Registration/Enrollment Period</font></p>
 </div>
  <div data-role="collapsible" data-theme="a" data-content-theme="a" data-iconpos="right"> 
@@ -596,7 +589,6 @@ div.ex{
     <h4><font face="Century Gothic">JANUARY 2015</font></h4>	
 	<p><font color="white" face="Century Gothic">JANUARY 1: NEW YEAR</font></p>
 	<p><font color="white" face="Century Gothic">JANUARY 5: Classes Resume</font></p>
-<p><font color="white" face="Century Gothic">JANUARY 19-23: CCS WEEK 2015</font></p>
 <p><font color="white" face="Century Gothic">JANUARY 22: IT OLYMPIAD</font></p>
 	<p><font color="white" face="Century Gothic">JANUARY 29-30: SCITE 2015</font></p>
 </div>
@@ -626,7 +618,7 @@ div.ex{
 </div>
   
 	 
-	 <div data-role="footer" data-position="fixed" data-theme="a">
+	 <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
 		<ul>
 		<li><a href="#home" data-theme="a"style="background-color:#1067aa" ><font size="2%">MENU</font></a></li>
@@ -636,16 +628,6 @@ div.ex{
   </div>
   <!--Student.grades-->
 <div data-role="page" data-theme="a" id="grades">
-<div data-role="panel" data-position-fixed="true" data-display="push" data-theme="a" id="nav-panel" data-position="right">
-
-            <div data-role="listview">
-                
-                <li><a id="logout">LOGOUT</a>
-                </li>
-            </div>
-
-</div>
-
 	<div data-role="header" data-position="fixed" data-tap-toggle="false" style="20%">
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/><br />
 			
