--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ div.ex{
 			<img src="css/images/header1.png" style="margin-left: auto; margin-right: auto; display: block;" height="100%"width="100%"/>
 		</div>
 <div data-role="content" data-theme="a" align="center">
-
+<img src="css/images/devs.png" height="100%" width="100%">
 </div>
  <div data-role="footer" data-position="fixed" data-theme="a" data-toggle="false">
 	<div data-role="navbar">
